Replacing h2 with h1 on some templates, fixing subscibe widget width on mobile divices, hompage template sections(welcome, about, newsletter, contact)
Replacing h2 with h1 on some templates, fixing subscibe widget width on mobile divices, hompage template sections(welcome, about, newsletter, contact)

--- a/frontend-templates/assets/css/main.css
+++ b/frontend-templates/assets/css/main.css
@@ -50,6 +50,12 @@ body {
 a{
     color:#3bacf0;
 }
+img{
+    max-width: 100%;
+}
+.py-10{
+    padding: 10rem 0!important;
+}
 
 .list {
     list-style: none;
@@ -314,7 +320,7 @@ a{
     height: 40px;
     background: #fff;
     border-radius: 0px;
-    width: 85%;
+    width: calc(100% - 42px);
     border: none;
     padding: 0px 15px;
     font-size: 14px;
@@ -332,6 +338,10 @@ a{
     width: 42px;
     cursor: pointer;
     color: #fff;
+}
+/*Homepage style*/
+.homepage_area section:nth-child(2n) {
+    background-color: #edf6ff;
 }
 
 /*Maintenance page style*/
@@ -373,7 +383,7 @@ a{
 
 /*Login and forgot password style*/
 
-.login_area, .signup_area {
+.login_area, .signup_area{
     display: flex;
     flex: 1;
     margin: 25px 0;
@@ -771,11 +781,15 @@ a{
 .about_area .about-intro-box, .contact_area .contact-intro-box, .subscribe_area .subscribe-intro-box{
     text-align: center;
 }
-
+.subscribe_area .subscribe-intro-box h1,
+.subscribe_area .subscribe-intro-box h2,
+.contact_area .contact-intro-box h1,
+.contact_area .contact-intro-box h2,
+.about_area .about-intro-box h1,
 .about_area .about-intro-box h2 {
     color: #222222;
+    text-transform: uppercase;
 }
-
 .about_area .about-details-box {
     color: #777777;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
@@ -862,6 +876,54 @@ a{
 }
 .contact_area .form-group i{
     left:10px;
+}
+.welcome_area{
+    background-image: -webkit-linear-gradient(0deg, #4dabff 0%, #62ddff 100%);
+}
+.welcome_area .welcome_box{
+    color:#fff;
+    vertical-align: middle;
+    align-self: center;
+}
+.welcome_area .welcome_box h1{
+font-size: 48px;
+font-weight: bold;
+line-height: 54px;
+}
+.welcome_area .welcome_btn {
+    display: inline-block;
+    background: rgba(255, 255, 255, 0.1);
+    color: #fff;
+    font-family: "Roboto", sans-serif;
+    width: auto;
+    min-width: 120px;
+    padding: 0 15px;
+    font-size: 14px;
+    font-weight: 500;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    line-height: 48px;
+    border-radius: 3px;
+    outline: none !important;
+    box-shadow: none !important;
+    text-align: center;
+    cursor: pointer;
+    transition: all 300ms linear 0s;
+    text-decoration: none;
+}
+.welcome_area .welcome_btn:hover {
+    background: #fff;
+    color: #222222;
+    border-color: #fff;
+}
+.welcome_area .welcome_btn.white {
+    background: white;
+    color: #222222;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+}
+.welcome_area .welcome_btn.white:hover {
+    background: rgba(255, 255, 255, 0.1);
+    color: #fff;
+    border-color: #fff;
 }
 
 /*loader*/
